fix align

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1 {
   background-color: rebeccapurple !important;
   color: hotpink !important;
-  text-align: justify;
+  text-align: left;
   text-transform: uppercase;
   margin: 0;
   filter: blur(1000px);
